Deletei e arrumei erros, modifiquei pack_json, comecei a junção de back e front, front-end cara nova, evento onclick em andamento

--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,14 @@
 </head>
 <body>
   <app-root></app-root>
+
+  <script>  
+      function sendOptions(){
+        var id = document.querySelector('#send').value;
+
+        alert(`${id}`);
+      } ;
+  </script>
+
 </body>
 </html>
